Fix article header on mobile screens

--- a/assets/less/layouts/_general.less
+++ b/assets/less/layouts/_general.less
@@ -59,9 +59,6 @@ body.page {
     }
 
     .image-title-box {
-      text-align: center;
-      background: rgba(0,0,0,0.8);
-      color: white;
       margin: 0;
 
       position: relative;
@@ -69,31 +66,42 @@ body.page {
       left: 0;
       padding: 5px 20px;
 
+      h1 {
+        font-size: xx-large;
+        font-weight: bold;
+        margin: 0 0 5px 0;
+      }
+
+      h2 {
+        margin: 0;
+        text-transform: uppercase;
+        font-size: small;
+      }
+
       @media (min-width: @bp-larger-than-phablet) {
+
+        text-align: center;
+        background: rgba(0,0,0,0.8);
+        color: white;
+
         padding: 20px 20px;
         position: absolute;
         top: 3em;
         left: 50%;
         transform: translateX(-50%);
         color: white;
+
+        h2 {
+          margin: 0;
+          text-transform: uppercase;
+          font-size: small;
+        }
       }
 
       @media (min-width: @bp-larger-than-tablet) {
         position: absolute;
         left: 100px;
         transform: none;
-      }
-
-      h1 {
-        font-size: xx-large;
-        font-weight: bold;
-        margin-top: 0;
-      }
-
-      h2 {
-        margin: 0;
-        text-transform: uppercase;
-        font-size: xx-small;
       }
 
     }
@@ -123,7 +131,8 @@ body.page {
 }
 
 .post-caption {
-  float: right;
+  display: block;
+  text-align: right;
   font-size: small;
 }
 
